@@ -1576,6 +1576,17 @@ Related Topics: @name.
 
   Related Topics: @link, @unlink.
 
+& @EVAL
+@EVAL
+
+  COMMAND: @eval <arg>
+
+  This command does nothing other than evaluate <arg> which makes it useful
+  for side-effects functions.  It is unlike think in that the result is not
+  treated as a message and ^-listens are not matched on the result.
+
+  Related Topics: @@, think.
+
 & @EXITFORMAT
 @EXITFORMAT
 
@@ -5290,14 +5301,14 @@ COMMANDS
   @@           @assert      @backup      @break       @cemit       @chown
   @chzone      @clone       @cpattr      @create      @decompile   @destroy
   @dig         @doing       @dolist      @drain       @edit        @email
-  @emit        @entrances   @femit       @find        @force       @fpose
-  @fsay        @halt        @htdesc      @if          @last        @link
-  @list        @listmotd    @lock        @mail        @mvattr      @name
-  @nemit       @notify      @npemit      @oemit       @open        @parent
-  @password    @pemit       @power       @program     @ps          @quitprogram
-  @quota       @remit       @robot       @search      @set         @stats
-  @sweep       @switch      @teleport    @timecheck   @trigger     @unlink
-  @unlock      @verb        @vrml_url    @wait        @wipe
+  @emit        @entrances   @eval        @femit       @find        @force
+  @fpose       @fsay        @halt        @htdesc      @if          @last
+  @link        @list        @listmotd    @lock        @mail        @mvattr
+  @name        @nemit       @notify      @npemit      @oemit       @open
+  @parent      @password    @pemit       @power       @program     @ps
+  @quitprogram @quota       @remit       @robot       @search      @set
+  @stats       @sweep       @switch      @teleport    @timecheck   @trigger
+  @unlink      @unlock      @verb        @vrml_url    @wait        @wipe
 
 { 'help commands2' for more }
 
@@ -6740,7 +6751,7 @@ FLAG LIST
     t - TRANSPARENT|   u - SUSPECT    |   v - VERBOSE    |   w - STAFF
     x - SLAVE      |   $ - SITEMON    |   z - CONTROL_OK |   ? - HEAD
     - - NOBLEED    |   | - VACATION   |   ~ - ASCII      |   ( - HTML
-                   |                  |       UNICODE    |           
+                   |                  |       UNICODE    |
   ------------------------------------------------------------------------
 
   (*) Note that these 'flags' are really types.  Also notice that THING
@@ -7104,7 +7115,7 @@ FUNCTION LIST (continued)
     STRCAT()    STRIP()     STRIPACCENTS()          STRIPANSI() STRLEN()
     STRMATCH()  STRMEM()    STRTRUNC()  SUB()       SUBEVAL()   SUBJ()
     SUCCESSES() SWITCH()    T()         TABLE()     TAN()       TEL()
-    TERMINFO()  TEXT()      TEXTFILE()  TIME()      TIMEFMT()   TRANSLATE() 
+    TERMINFO()  TEXT()      TEXTFILE()  TIME()      TIMEFMT()   TRANSLATE()
     TR()        TRIGGER()   TRIM()      TRUNC()     TXLEVEL()   TYPE()
     U()         UCSTR()     UDEFAULT()  ULOCAL()    UNPACK()    V()
     VADD()      VALID()     VCROSS()    VDIM()      VDOT()      VERSION()
@@ -12877,8 +12888,8 @@ TERMINFO()
 
   Returns a list with at least one element - the type of client used
   by the player, or "unknown" if the client being used doesn't support
-  being asked to identify itself using RFC 1091. 
-  
+  being asked to identify itself using RFC 1091.
+
   Other elements in the list describe client capabilities, and
   currently include:
   pueblo           present if the client is in Pueblo mode.
@@ -12888,7 +12899,7 @@ TERMINFO()
   it, or 'mxp' for clients which support that, for instance.
 
   Players can use terminfo() on their own connections. Using it on
-  other players is restricted to wizards.  
+  other players is restricted to wizards.
 
 & TERSE
 TERSE
@@ -12953,6 +12964,8 @@ THINK
   substitution is performed. This is essentially equivalent to "@pemit
   me=<message>", but with "think", there is no prepended text. One possible
   use: "@adesc me=think --> %n(%#[flags(%#)]) just looked at you."
+
+  Relatd Topics: @eval.
 
 & THROW
 THROW
@@ -13156,7 +13169,7 @@ TR()
   same length after expansion of ranges. If a character exists more than
   once in <find>, only the last instance will be counted. The example
   below is the common ROT-13 algorithm for lower case strings, demonstrated
-  with every letter explicitly listed, and with the equivalent but briefer 
+  with every letter explicitly listed, and with the equivalent but briefer
   character ranges. Literal -'s can be in <find> and <replace> if they are not
   part of valid ranges. Valid ranges are of the forms a-z, A-Z, a-Z, and 0-9.
 
